Added collection for user details still no idea how it works lol

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,10 @@
             android:name=".HomeActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".userDetailsActivity"
+            android:exported="false">
 
+        </activity>
     </application>
 
 </manifest>
