Fix footer before change all to fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity android:name=".ForgetPasswordActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".ProfileActivity"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
