--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,12 @@
         <activity android:name=".UpdatePositionActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".doctor.DoctorHomeActivity"
+            android:exported="false">
+        </activity>
+        <activity android:name=".ClerkDashboardActivity"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
