Add on doctor available time

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,9 @@
         <activity android:name=".ClerkDashboardActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".doctor.DoctorAvailableAppoinmentActivity"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
