--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
         <activity android:name=".doctor.DoctorAvailableAppoinmentActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".BookingActivity"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
