finally date is done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
         <activity android:name=".BookingActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".SelectDoctorActivity"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
