Add on new email on the user side and enhance the forget password

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,9 @@
         <activity android:name=".SelectDoctorActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".resetPasswordActivity"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
