--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ android {
     buildFeatures{
         viewBinding=true;
     }
+    packagingOptions{
+        exclude 'META-INF/NOTICE.md'
+        exclude 'META-INF/LICENSE.md'
+    }
+
 }
 
 dependencies {
@@ -51,7 +56,14 @@ dependencies {
 
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
 
+    implementation 'com.sun.mail:android-mail:1.6.7'
+    implementation 'com.sun.mail:android-activation:1.6.7'
+
+
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
