--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,9 @@
         <activity android:name=".resetPasswordActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".ViewAppointmentActivity"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
