Disable day for appointment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,9 @@
         <activity android:name=".doctor.DoctorViewAppointment"
             android:exported="false">
         </activity>
+        <activity android:name=".doctor.DoctorDisableAppointmentActivity"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
