--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
 
     implementation 'androidx.cardview:cardview:1.0.0'
 
+    implementation 'com.google.android.gms:play-services-maps:18.0.1'
+
 
 
     testImplementation 'junit:junit:4.13.2'
