Home page finally make it lol

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,9 @@
         <activity android:name=".doctor.DoctorDisableAppointmentActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".RedesignActivity"
+            android:exported="false">
+        </activity>
 
 
     </application>
