--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.1'
 
 
+    implementation 'com.itextpdf:itextg:5.5.10'
+
+
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
