--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,6 +85,9 @@
         <activity android:name=".doctor.DoctorDisableAppointmentActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".doctor.DoctorInformationActivity"
+            android:exported="false">
+        </activity>
         <activity android:name=".RedesignActivity"
             android:exported="false">
         </activity>
