--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,41 +40,32 @@ android {
     }
 
 }
-
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'androidx.appcompat:appcompat:1.4.0' // Use a compatible version
+    implementation 'com.google.android.material:material:1.4.0' // Use a compatible version
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3' // Use a compatible version
+    implementation 'com.google.firebase:firebase-auth:21.0.3' // Use a compatible version
     implementation 'com.google.firebase:firebase-firestore-ktx:24.7.1'
-    implementation 'com.google.firebase:firebase-firestore:24.7.1'
-    implementation 'com.google.firebase:firebase-database:20.2.2'
+    implementation 'com.google.firebase:firebase-database:20.2.2' // Use a compatible version
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
 
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
-
     implementation 'com.sun.mail:android-mail:1.6.7'
     implementation 'com.sun.mail:android-activation:1.6.7'
-
     implementation 'androidx.cardview:cardview:1.0.0'
-
     implementation 'com.google.android.gms:play-services-maps:18.0.1'
-
-
     implementation 'com.itextpdf:itextg:5.5.10'
 
+    implementation 'com.google.firebase:firebase-core:19.0.0' // Use a compatible version
+    implementation 'com.google.firebase:firebase-storage:19.2.0' // Use a compatible version
+    implementation 'com.google.firebase:firebase-storage-ktx:19.2.0' // Use a compatible version
 
-
-    implementation 'com.google.firebase:firebase-core:19.0.0'
-    implementation 'com.google.firebase:firebase-storage:19.2.0'
-
-
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
-
