Add on hospital in doctor Information

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,6 +114,9 @@
         <activity android:name=".RedesignActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".DoctorAddPDF"
+        android:exported="false">
+    </activity>
 
 
     </application>
