Fix some navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,9 @@
         <activity android:name=".DoctorAddPDF"
         android:exported="false">
     </activity>
+        <activity android:name=".clerk.SuperAccountHome"
+            android:exported="false">
+        </activity>
 
 
     </application>
