add on health report page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -160,6 +160,10 @@
             android:screenOrientation="portrait"
             android:exported="false">
         </activity>
+        <activity android:name=".healthActivity"
+            android:screenOrientation="portrait"
+            android:exported="false">
+        </activity>
 
 
     </application>
