--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -164,6 +164,14 @@
             android:screenOrientation="portrait"
             android:exported="false">
         </activity>
+        <activity android:name=".AllDepartmentActivity"
+            android:screenOrientation="portrait"
+            android:exported="false">
+        </activity>
+        <activity android:name=".AddDepartmentActivity"
+            android:screenOrientation="portrait"
+            android:exported="false">
+        </activity>
 
 
     </application>
