--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -25,8 +25,8 @@
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.hospitalmanagementapplication.fileprovider"
-            android:grantUriPermissions="true"
-            android:exported="false">
+            android:exported="false"
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
@@ -34,7 +34,6 @@
 
         <activity
             android:name=".SignInActivity"
-            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,134 +43,128 @@
         </activity>
         <activity
             android:name=".SignUpActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".HomeActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".userDetailsActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".ForgetPasswordActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".ProfileActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".AllUserActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".UpdatePositionActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".doctor.DoctorHomeActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".clerk.ClerkDashboardActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".doctor.DoctorAvailableAppointmentActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".BookingActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".SelectDoctorActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".resetPasswordActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".ViewAppointmentActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".doctor.DoctorViewAppointment"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".doctor.DoctorDisableAppointmentActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".doctor.DoctorInformationActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".addHospitalActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".allHospitalActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".ViewHospitalActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".AllIllnessActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".AddIllnessActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".ViewIllnessActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".AddAnnouncement"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".RedesignActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".DoctorAddPDF"
-            android:screenOrientation="portrait"
-        android:exported="false">
-    </activity>
-        <activity android:name=".clerk.SuperAccountHome"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".AllMedicineActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".AddMedicineActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".healthActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".AllDepartmentActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
-        <activity android:name=".AddDepartmentActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
+        <activity
+            android:name=".userDetailsActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".ForgetPasswordActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".ProfileActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".AllUserActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".UpdatePositionActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".doctor.DoctorHomeActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".clerk.ClerkDashboardActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".doctor.DoctorAvailableAppointmentActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".BookingActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".SelectDoctorActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".resetPasswordActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".ViewAppointmentActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".doctor.DoctorViewAppointment"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".doctor.DoctorDisableAppointmentActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".doctor.DoctorInformationActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".addHospitalActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".allHospitalActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".ViewHospitalActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".AllIllnessActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".AddIllnessActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".ViewIllnessActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".AddAnnouncement"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".RedesignActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".DoctorAddPDF"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".clerk.SuperAccountHome"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".AllMedicineActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".AddMedicineActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".healthActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".AllDepartmentActivity"
+
+            android:exported="false"></activity>
+        <activity
+            android:name=".AddDepartmentActivity"
+
+            android:exported="false"></activity>
 
 
     </application>
